// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EllipsisText /> should match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c1 {
  position: relative;
  width: 100%;
  color: #2F3850;
}

<div>
  <div
    class="c0"
    width="100%"
  >
    <span
      class="c1"
      data-for=""
      theme="[object Object]"
      width="0"
    >
      <span />
      <span />
      <span
        style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
      >
        …
      </span>
    </span>
  </div>
</div>
`;

exports[`<EllipsisText /> should match the snapshot 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  width: 100%;
}

.c1 {
  position: relative;
  width: 100%;
  color: #2F3850;
}

<div>
  <div
    class="c0"
    width="100%"
  >
    <span
      class="c1"
      data-for="Test"
      data-tip="Test"
      theme="[object Object]"
      width="0"
    >
      <span />
      <span>
        Test
      </span>
      <span
        style="position: fixed; visibility: hidden; top: 0px; left: 0px;"
      >
        …
      </span>
    </span>
  </div>
</div>
`;
